/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
 */
package Modelo;
import Modelo.Funcionario;

public class Estudiante extends Persona {
    public Estudiante(String nombre, String identificacion) {
        super(nombre, identificacion, "Estudiante");
    }
}