/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
 */
package Modelo;

public class Funcionario extends Persona {
    public Funcionario(String nombre, String identificacion) {
        super(nombre, identificacion, "Funcionario");
    }
}
