/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
 */
package Modelo;

public class Visitante extends Persona {
    public Visitante(String nombre, String identificacion) {
        super(nombre, identificacion, "Visitante");
    }
}
